<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/background01">

                <ImageView
                android:id="@+id/img_descripion"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="6dp"
                android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/img_descripion"
                    android:orientation="vertical"
                    android:layout_margin="6dp">
                    <TextView
                        android:id="@+id/tv_item_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        tools:text="@string/book_name" />
                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/detail_more_books"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:text="@string/more_detail" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:text="@string/deskripsi"
                android:id="@+id/content_detail"
                style="@style/TextContent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="20dp"
                android:lineSpacingMultiplier="1"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/ic_favourite"
                android:layout_margin="16dp"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_fav"
                android:layout_width="32dp"
                android:layout_height="32dp" />
        </RelativeLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rating:"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/penilaian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/Textfield"
                    android:text="@string/sumber"/>
                <TextView
                    style="@style/Textvalue"
                    android:id="@+id/content_wafat"
                    android:text="@string/URL"/>

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:justificationMode="inter_word"
            android:text="@string/deskripsi"/>

    </LinearLayout>
    </ScrollView>


</LinearLayout>